# structs/handlers/warehouse.go
@@ -1,13 +1,23 @@
 package handlers
 
+// WarehouseSwagger
+// Objeto de warehouseUsers
+// swagger:parameters AclPost
+type WarehouseSwagger struct {
+	//in: body
+	Users WarehouseUsers `json:"users"`
+}
+
 // WarehouseUsers
-//
-// # elemento de respuesta de warehouse users
-//
+// Elementos para publiccar un usuario de un warehouse
 // swagger:model WarehouseUsers
 type WarehouseUsers struct {
-	Pkr            int    `json:"pkr"`
-	Crd            int    `json:"crd"`
-	Adm            int    `json:"adm"`
+	// example: 5
+	Pkr int `json:"pkr"`
+	// example: 3
+	Crd int `json:"crd"`
+	// example: 1
+	Adm int `json:"adm"`
+	// example: 666777888
 	WarehousePhone string `json:"phone"`
 }
